Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/Service_Maste_Transaction_Batches__c.object-meta.xml
<CustomObject>
    <label>Service_Maste_Transaction_Batch</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service_Maste_Transaction_Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>