Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/AddressesCount__c.field-meta.xml
<CustomField>
    <fullName>AddressesCount__c</fullName>
    <label>Addresses Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>