Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>BatchId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>