Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/batchIdentifier__c.field-meta.xml
<CustomField>
    <fullName>batchIdentifier__c</fullName>
    <label>batchIdentifier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>