Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/downloaded__c.field-meta.xml
<CustomField>
    <fullName>downloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>downloaded</label>
    <type>Checkbox</type>
</CustomField>