Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/HasError__c.field-meta.xml
<CustomField>
    <fullName>HasError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasError</label>
    <type>Checkbox</type>
</CustomField>