Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>TransactionId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>