Instant Address Standard/main/default/objects/Service_Maste_Transaction_Batches__c/fields/Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded</label>
    <type>Checkbox</type>
</CustomField>